--- a/style.css
+++ b/style.css
@@ -17,3 +17,23 @@ header{
     font-weight: 600;
     font-size: 16px;
 }
+.align-text{
+    text-align: left;
+}
+.hot-card{
+    margin-top: 20px;
+    position: relative;
+    top: -40px;
+    border-radius: 20px;
+    box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25)
+}
+.package{
+    margin-top: 40px;
+    margin-bottom: 90px;
+}
+
+@media only screen and (max-width : 480px) {
+    .perfect{
+        font-size: 15px;
+    }
+}
