--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header{
 }
 
 .header-button{
-    padding: 5px 40px;
+    /* padding: 5px 40px; */
     color: #3F87F5;
     font-size: 16px;
     font-weight: bold;
@@ -17,13 +17,12 @@ header{
     font-weight: 600;
     font-size: 16px;
 }
-.align-text{
-    text-align: left;
-}
+
 .hot-card{
     margin-top: 20px;
     position: relative;
     top: -40px;
+    background-color: #3F87F5;
     border-radius: 20px;
     box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25)
 }
@@ -32,8 +31,17 @@ header{
     margin-bottom: 90px;
 }
 
+
+
 @media only screen and (max-width : 480px) {
     .perfect{
         font-size: 15px;
+        
     }
+    .header-button{
+        margin-bottom: 4px;
+        padding: 5px;
+        font-size: 12px;
+    }
+ 
 }
