--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header{
 }
 
 .header-button{
-    /* padding: 5px 40px; */
+    padding: 5px 40px;
     color: #3F87F5;
     font-size: 16px;
     font-weight: bold;
@@ -30,11 +30,11 @@ header{
     box-shadow: 0px 42px 34px rgba(63, 135, 245, 0.25)
 }
 .package{
-    margin-top: 40px;
-    margin-bottom: 90px;
+    margin-top: 100px;
+    margin-bottom: 80px;
 }
 footer{
-    height: 300px;
+    height: 280px;
     width: 100%;
 }
 
@@ -45,6 +45,8 @@ footer{
         font-size: 15px;
         
     }
+    
+    
     .header-button{
         margin-bottom: 4px;
         padding: 5px;
